--- a/app/css/components/exercise-status-tag.css
+++ b/app/css/components/exercise-status-tag.css
@@ -19,6 +19,10 @@
         }
     }
 
+    &.--wip {
+        @apply border-warningBtnBorder bg-warning;
+        @apply text-white;
+    }
     &.--in-progress {
         @apply border-lightBlue bg-veryLightBlue;
         @apply text-lightBlue;
