Slightly tweak text

--- a/app/views/mailers/mailshots_mailer/donor_company_support.html.erb
+++ b/app/views/mailers/mailshots_mailer/donor_company_support.html.erb
@@ -518,7 +518,7 @@ div.preheader {
                     Some people are also able to support Exercism through their corporate learning or education allowance. They're allowed to spend up to a certain amount on their professional development and choose to donate some of it to Exercism. Could you do the same?
                   </p>
                   <p style="margin-top: 20px;margin-bottom: 0;">
-                    As a reminder, Exercism is a not-for-profit organisation. We rely entirely on donations from individuals (like you!) and companies to survive. You can learn more on our <a href="https://exercism.org/about/impact" style="font-weight:600; color:#2E57E8; text-decoration: underline">impact page</a>.
+                    As a reminder, Exercism is a not-for-profit organisation. We rely entirely on donations from individuals (like you!) and companies to survive. You can learn more about our impact on our <a href="https://exercism.org/about/impact" style="font-weight:600; color:#2E57E8; text-decoration: underline">impact page</a>.
                   </p>
                   <p style="margin-top: 20px;margin-bottom: 0;">
                     If you'd like more information on either idea, please let me know!                    
