--- a/app/views/mailers/mailshots_mailer/company_support_donor.text.erb
+++ b/app/views/mailers/mailshots_mailer/company_support_donor.text.erb
@@ -18,7 +18,7 @@ Explore Exercism at https://exercism.org.
 
 ---
 
-You're receiving this because you've previously signed up to Exercism (the free, not-for-profit programming education platform) and are subscribed to our donation emails, where we send occasional updates related to donations.
+You're receiving this because you've previously signed up to Exercism (the free, not-for-profit programming education platform) and are subscribed to our fundraising emails, where we send occasional updates related to fundraising.
 
-You can unsubscribe from this email (<%= unsubscribe_url(token: @user.communication_preferences.token, key: :email_on_donation_notification) %>) or change your notification settings (<%= unsubscribe_url(token: @user.communication_preferences.token) %>) to opt out of some or all emails.
+You can unsubscribe from this email (<%= unsubscribe_url(token: @user.communication_preferences.token, key: :email_about_fundraising_campaigns) %>) or change your notification settings (<%= unsubscribe_url(token: @user.communication_preferences.token) %>) to opt out of some or all emails.
 
