Change job role on mail

--- a/app/views/mailers/mailshots_mailer/company_support_donor.html.erb
+++ b/app/views/mailers/mailshots_mailer/company_support_donor.html.erb
@@ -526,7 +526,7 @@ div.preheader {
                   <p style="margin-top: 20px;margin-bottom: 20px;">
                     <p style="margin-top: 0;margin-bottom: 0;">Thanks,<br/>
                     Loretta Bresciani Murray<br/>
-                    Head of Partnerships and Fundraising of Exercism</p>
+                    Head of Partnerships at Exercism</p>
                   </p>
                 </div>
               </div>
