--- a/app/views/mailers/mailshots_mailer/company_support_donor.text.erb
+++ b/app/views/mailers/mailshots_mailer/company_support_donor.text.erb
@@ -12,7 +12,7 @@ If you'd like more information on either idea, please let me know!
 
 Thanks,
 Loretta Bresciani Murray
-Head of Partnerships and Fundraising of Exercism
+Head of Partnerships at Exercism
 
 Explore Exercism at https://exercism.org.
 
