Move css block into correct scope, make lines at least as wide as the screen

--- a/app/css/components/code-pane.css
+++ b/app/css/components/code-pane.css
@@ -4,6 +4,9 @@
     & code {
         @apply flex;
         @apply py-8;
+        ul {
+            @apply w-fill;
+        }
         & li {
             @apply flex;
             @apply text-15 font-mono leading-huge;
