--- a/app/css/pages/editor.css
+++ b/app/css/pages/editor.css
@@ -282,6 +282,31 @@
             /* Put a shadow over the LHS */
             @apply shadow-xsZ1 z-shadow;
 
+            .test-tabs {
+                @apply flex items-center;
+                @apply bg-backgroundColorB;
+                @apply border-t-1 border-borderColor6;
+                @apply overflow-y-hidden overflow-x-auto;
+                @apply flex-shrink-0;
+
+                .c-tab {
+                    @apply grid place-items-center;
+                    @apply bg-backgroundColorB;
+                    @apply px-16 py-8 mr-0;
+                    @apply text-13 text-textColor6 leading-paragraph;
+                    @apply border-r-1 border-borderColor7;
+                    @apply rounded-none;
+                    margin-bottom: -1px;
+                    @apply border-b-1;
+
+                    &.selected {
+                        @apply bg-backgroundColorA;
+                        @apply text-textColor2 font-medium;
+                        border-bottom: 1px solid transparent;
+                    }
+                }
+            }
+
             & .tabs {
                 @apply flex flex-shrink-0 flex-grow-0;
                 @apply py-16 px-24;
