--- a/app/views/challenges/external.html.haml
+++ b/app/views/challenges/external.html.haml
@@ -11,7 +11,7 @@
         %strong.font-semibold 12 different programming languages
         in 2023.
       %p
-        Go old-school with COBOL, cutting edge with Unison and esoteric with Prolog. Explore low-level code with Assembly, expressions with a Lisp and functional with Haskell!
+        Go old-school with COBOL, cutting edge with Unison or esoteric with Prolog. Explore low-level code with Assembly, expressions with a Lisp or functional with Haskell!
       %p.unsure
         Expand your knowledge. Have fun. Join the community. 100% free.
 
