Tweaks from review

--- a/app/views/challenges/12in23.html.haml
+++ b/app/views/challenges/12in23.html.haml
@@ -12,7 +12,7 @@
         %strong.font-semibold #12in23
         hashtag around social media!
       %p.cta
-        Complete 5 exercises (not including "Hello World") in a track to tick off that language!
+        Submit 5 exercises (not including "Hello World") in a track to tick off that language!
 
       .grid.grid-cols-4.gap-32.mx-auto{ class: 'w-[1100px]' }
         - @track_counts.each do |track_id, count|
