--- a/app/css/components/modal.css
+++ b/app/css/components/modal.css
@@ -17,7 +17,7 @@
             & .--modal-content {
                 @apply py-48;
                 width: 100%;
-                min-height: 100%;
+                /* min-height: 100%; */
             }
         }
     }
