--- a/app/views/challenges/12in23.html.haml
+++ b/app/views/challenges/12in23.html.haml
@@ -1,7 +1,7 @@
 #challenge-12in23-page
   %section.top-section
     .lg-container.c-shapes
-      %h1.text-h1.mb-16 The 12 Languages in 2023 Challenge
+      %h1.text-h1.mb-16 The #12in23 Challenge
       %p
         Below you'll see a list of all the languages you've used during 2023.
         Aim to complete 12 languages by the end of the year.
@@ -12,7 +12,7 @@
         %strong.font-semibold #12in23
         hashtag around social media!
       %p.cta
-        Complete 5 exercises (not "Hello World") in a language to tick off a language!
+        Submit 5 exercises (not including "Hello World") in a track to tick off that language!
 
       .grid.grid-cols-4.gap-32.mx-auto{ class: 'w-[1100px]' }
         - @track_counts.each do |track_id, count|
