--- a/app/views/challenges/external.html.haml
+++ b/app/views/challenges/external.html.haml
@@ -5,12 +5,13 @@
         - Track.active.map(&:icon_url).shuffle.each do |icon_url|
           = image_tag icon_url, alt: '', role: :presentation, class: "c-icon c-track-icon h-[24px] w-[24px] lg:h-[48px] lg:w-[48px]"
 
-      %h1.text-h0.mb-16 The 12 Languages in 2023 Challenge
+      %h1.text-h0.mb-16 The #12in23 Challenge
       %p.mb-12
-        Expand your horizons in 2023 by trying out
-        %strong.font-semibold 12 different programming languages.
+        Expand your horizons by trying out
+        %strong.font-semibold 12 different programming languages
+        in 2023.
       %p
-        Go old-school with COBOL, cutting edge with Unison and esoteric with Prolog. Explore low-level code with Assembly, expressions with a Lisp and functional with Haskell!
+        Go old-school with COBOL, cutting edge with Unison or esoteric with Prolog. Explore low-level code with Assembly, expressions with a Lisp or functional with Haskell!
       %p.unsure
         Expand your knowledge. Have fun. Join the community. 100% free.
 
