Update community tab for newer data

--- a/app/views/community/show.html.haml
+++ b/app/views/community/show.html.haml
@@ -24,15 +24,15 @@
           .flex.flex-col.mr-auto
             %h5.text-h5 What are your favorite books on programming?
             .text-textColor6.leading-150
-              Last replied Jeremy Walker
+              Last reply by snowfrogdev
           .message-count
             = graphical_icon "message-bubble-square"
-            3
+            48
 
-        = link_to "https://forum.exercism.org/t/version-3-1-0-of-the-cli-has-been-released/188", class: 'flex items-center bg-white px-20 py-12 shadow-smZ1 rounded-8 mb-8' do
+        = link_to "https://forum.exercism.org/t/what-monthly-themes-should-we-choose-for-12in23/2243/1", class: 'flex items-center bg-white px-20 py-12 shadow-smZ1 rounded-8 mb-8' do
           = image_tag "team/erik.jpg", alt: "A photo of Erik Schierboom", class: 'mr-8 h-[32px] w-[32px] rounded-circle'
           .flex.flex-col.mr-auto
-            %h5.text-h5 Version 3.1.0 of the CLI has been released
+            %h5.text-h5 What monthly themes should we choose for #12in23?
             .text-textColor6.leading-150
               Posted by ErikSchierboom
           .message-count
