--- a/app/views/mailers/mailshots_mailer/challenge_12in23_launch.text.erb
+++ b/app/views/mailers/mailshots_mailer/challenge_12in23_launch.text.erb
@@ -13,7 +13,7 @@ I really hope you like the idea and are up for taking part!
 Jeremy Walker,
 CEO of Exercism
 
-Explore Exercism at https://exercism.org.
+Register for #12in23 at https://exercism.org/challenges/12in23
 
 ---
 
