--- a/app/views/mailers/mailshots_mailer/challenge_12in23_launch.html.erb
+++ b/app/views/mailers/mailshots_mailer/challenge_12in23_launch.html.erb
@@ -526,7 +526,7 @@ div.preheader {
                   </p>
 
                   <p style="margin-top: 20px;margin-bottom: 0;">
-                    I really hope you like the idea and are up for taking part!
+                    I really hope you like the idea and are up for taking part! You can get started using the button below.
                   </p>
 
                   <p style="margin-top: 20px;margin-bottom: 20px;">
@@ -538,8 +538,8 @@ div.preheader {
 
               <div style="margin-left: 20px;margin-right: 20px;">
                 <div class="btn btn--shadow btn--large" style="margin-bottom: 20px;">
-                  <![if !mso]><a style="border-radius: 4px;display: inline-block;font-size: 16px;font-weight: bold;line-height: 24px;padding: 12px 24px 13px 24px;text-align: center;text-decoration: none !important;transition: opacity 0.1s ease-in;color: #ffffff !important;box-shadow: inset 0 -2px 0 0 rgba(0, 0, 0, 0.2);background-color: #2e57e8;font-family: Poppins, Trebuchet MS, Avenir, Segoe UI, sans-serif;" href="https://exercism.org">
-                    EXPLORE EXERCISM
+                  <![if !mso]><a style="border-radius: 4px;display: inline-block;font-size: 16px;font-weight: bold;line-height: 24px;padding: 12px 24px 13px 24px;text-align: center;text-decoration: none !important;transition: opacity 0.1s ease-in;color: #ffffff !important;box-shadow: inset 0 -2px 0 0 rgba(0, 0, 0, 0.2);background-color: #2e57e8;font-family: Poppins, Trebuchet MS, Avenir, Segoe UI, sans-serif;" href="https://exercism.org/challenges/12in23">
+                    REGISTER FOR #12IN23
                     <span style="font-size:20px;margin-left:5px">➡</span>
                   </a><![endif]>
               </div>
