--- a/app/views/mailers/mailshots_mailer/challenge_12in23_launch.html.erb
+++ b/app/views/mailers/mailshots_mailer/challenge_12in23_launch.html.erb
@@ -507,22 +507,20 @@ div.preheader {
                 <div style="mso-line-height-rule: exactly;mso-text-raise: 11px;vertical-align: middle;">
                   <p style="margin-top: 16px;margin-bottom: 0;">Hi <%= @user.handle %>,</p>
                   <p style="margin-top: 20px;margin-bottom: 0;">
-                    Happy new year! For 2023, we’ve decided to do something a bit different. We're encouraging everyone to try 12 different languages throughout the year!
-                    We're calling this the
-                    <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://exercism.org/challenges/12in23"><span style="color:#2e57e8">#12in23 Challenge</span></a>.
+                    Happy new year!
+                    We're excited to announce the <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://exercism.org/challenges/12in23"><span style="color:#2e57e8">#12in23 Challenge</span></a>, a new initative that encourages people to try out 12 different programming languages during the year 2023.
                   </p>
                   <p style="margin-top: 20px;margin-bottom: 0;">
-                    Exploring different languages is a great way of opening your eyes to new concepts and paradigms and broadening your programming horizons. We’ve got over 60 languages ranging from the old (looking at you, Cobol) to the new and shiny (hello, Unison!) to the esoteric (everyone’s favourite: Prolog). We’ve got functional languages, OOPs languages, more lisps than you can shake a fist at, and some downride odd stuff like vimscript! There’s loads to choose from 🙂
+                    Learning new programming languages can be intimdating but it's one of the best things you can do for your career as software developer. It opens your eyes to new concepts and paradigms and broadens your programming horizons. 
+                    That's why we created #12in23 - to provide a fun and structured way for people to step out of their comfort zone and try something new.
                   </p>
                   <p style="margin-top: 20px;margin-bottom: 0;">
-                    Each month from February we’ll be showcasing a different category or theme and some of the languages that shine in that area.
+                    The idea is simple: each month, you'll focus on learning a new programming language. We'll provide resources and support to help you along the way, and you can track your progress and connect with other participants on our online community.
+                    We’ve got over 60 languages ranging from the old (looking at you, Cobol) to the new and shiny (hello, Unison!) to the esoteric (everyone’s favourite: Prolog). We’ve got functional languages, OOPs languages, more lisps than you can shake a fist at, and some downride odd stuff like vimscript! There’s loads to choose from 🙂
                   </p>
 
                   <p style="margin-top: 20px;margin-bottom: 0;">
-                    And finally we want this to be social. You can use the
-
-                    <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://forum.exercism.org/tag/12in23"><span style="color:#2e57e8">#12in23 tag in the forum</span></a>
-                    to discuss the new things you’re trying, or as a hashtag on social media or streaming platforms to showcase your solutions. If you are streaming or want to increase the reach of your videos, please again ping @jonathanmiddleton who can help!
+                    By the end of the year, you'll have gained a diverse skillset and a deeper understanding of how programming languages work. Plus, you'll be part of a community of like-minded individuals who are all working towards the same goal.
                   </p>
 
                   <p style="margin-top: 20px;margin-bottom: 0;">
