Be less offensive

--- a/app/views/mailers/mailshots_mailer/challenge_12in23_launch.html.erb
+++ b/app/views/mailers/mailshots_mailer/challenge_12in23_launch.html.erb
@@ -516,7 +516,7 @@ div.preheader {
                   </p>
                   <p style="margin-top: 20px;margin-bottom: 0;">
                     The idea is simple: each month, you'll focus on learning a new programming language. We'll provide resources and support to help you along the way, and you can track your progress and connect with other participants on our online community.
-                    We’ve got over 60 languages ranging from the old (looking at you, Cobol) to the new and shiny (hello, Unison!) to the esoteric (everyone’s favourite: Prolog). We’ve got functional languages, OOPs languages, more lisps than you can shake a fist at, and some downride odd stuff like vimscript! There’s loads to choose from 🙂
+                    We’ve got over 60 languages ranging from the old (looking at you, Cobol) to the new and shiny (hello, Unison!) to the esoteric (everyone’s favourite: Prolog). We’ve got functional languages, OOPs languages, more lisps than you can shake a fist at, and some extremely niche choices like vimscript! There’s loads to choose from 🙂
                   </p>
 
                   <p style="margin-top: 20px;margin-bottom: 0;">
