--- a/app/views/mailers/mailshots_mailer/challenge_12in23_launch.html.erb
+++ b/app/views/mailers/mailshots_mailer/challenge_12in23_launch.html.erb
@@ -508,15 +508,15 @@ div.preheader {
                   <p style="margin-top: 16px;margin-bottom: 0;">Hi <%= @user.handle %>,</p>
                   <p style="margin-top: 20px;margin-bottom: 0;">
                     Happy new year!
-                    We're excited to announce the <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://exercism.org/challenges/12in23"><span style="color:#2e57e8">#12in23 Challenge</span></a>, a new initative that encourages people to try out 12 different programming languages during the year 2023.
+                    We're excited to announce the <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://exercism.org/challenges/12in23"><span style="color:#2e57e8">#12in23 Challenge</span></a>, a new initative encouraging people to try out 12 different programming languages during 2023.
                   </p>
                   <p style="margin-top: 20px;margin-bottom: 0;">
-                    Learning new programming languages can be intimdating but it's one of the best things you can do for your career as software developer. It opens your eyes to new concepts and paradigms and broadens your programming horizons. 
-                    That's why we created #12in23 - to provide a fun and structured way for people to step out of their comfort zone and try something new.
+                    Learning new programming languages can be intimdating but it's one of the best things you can do for your career as a software developer. It opens your eyes to new concepts and paradigms, and broadens your programming horizons. 
+                    That's why we created <a style="text-decoration: underline;transition: opacity 0.1s ease-in; font-weight:600; color:#2E57E8" href="https://exercism.org/challenges/12in23"><span style="color:#2e57e8">#12in23</span></a> - to provide a fun and structured way for people to step out of their comfort zone and try something new.
                   </p>
                   <p style="margin-top: 20px;margin-bottom: 0;">
                     The idea is simple: each month, you'll focus on learning a new programming language. We'll provide resources and support to help you along the way, and you can track your progress and connect with other participants on our online community.
-                    We’ve got over 60 languages ranging from the old (looking at you, Cobol) to the new and shiny (hello, Unison!) to the esoteric (everyone’s favourite: Prolog). We’ve got functional languages, OOPs languages, more lisps than you can shake a fist at, and some extremely niche choices like vimscript! There’s loads to choose from 🙂
+                    We’ve got over 60 languages for you to try, ranging from the old (looking at you, Cobol) to the new and shiny (hello, Unison!) to the esoteric (everyone’s favourite: Prolog). We’ve got functional languages, OOPs languages, more lisps than you can shake a fist at, and some extremely niche choices like vimscript! There’s loads to choose from 🙂
                   </p>
 
                   <p style="margin-top: 20px;margin-bottom: 0;">
