Correct a small typo on Dashboard

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -44,7 +44,7 @@
           Try your hand at mentoring
         = link_to community_path, class: 'action e-hover-grow' do
           = graphical_icon "contributing-header", category: 'graphics'
-          Get involve in the community
+          Get involved in the community
         = link_to donate_url, class: 'action e-hover-grow' do
           = graphical_icon "floating-cash", category: 'graphics'
           Donate to help us grow sustainably
