Add donations banner to the top of the website

--- a/app/views/donations/index.html.haml
+++ b/app/views/donations/index.html.haml
@@ -5,10 +5,10 @@
       = graphical_icon "community-with-exercism-logo", category: :graphics
       %h1.text-h1.mb-4
         %strong.text-gradient Support our goal:
-        To bring the joy of programming to everyone, everywhere ✨
+        Give everyone an equal chance to learn and master programming. ✨
 
       .text-textColor1.text-20.text-center.leading-150.mb-48
-        We care about social mobility and bringing underrepresented communities into tech.
+        If you share our desire to make the world a better &amp; fairer place, please support us.
         %br
         %span.font-medium
           You can learn more about our
