Fix glitchy images on Build page, fix typo

--- a/app/views/challenges/external.html.haml
+++ b/app/views/challenges/external.html.haml
@@ -38,7 +38,7 @@
         .reason
           = graphical_icon "mentoring-opportunity"
           %h3 Expand your knowledge
-          %p Learning new languages is a create way to explore different paradigms, concepts and ideas. Learning different ways to solve problems is a guaranteed way to make you a better developer.
+          %p Learning new languages is a great way to explore different paradigms, concepts and ideas. Learning different ways to solve problems is a guaranteed way to make you a better developer.
 
         .reason
           = graphical_icon "mentoring-soft-skills"
