--- a/app/views/tracks/show/_summary_article.html.haml
+++ b/app/views/tracks/show/_summary_article.html.haml
@@ -2,7 +2,7 @@
   .lg-container.container
     .lhs
       - unless user_track.tutorial_exercise_completed?
-        = render "tracks/show/start_track_section", track: track
+        = render "tracks/show/start_track_section", track:
 
       %section.progress-chart
         %h2
@@ -64,27 +64,39 @@
           = ReactComponents::Common::ProgressGraph.new(last_8_weeks_counts, 70, 145)
 
       - if user_track.num_completed_exercises.positive?
-        = render "tracks/show/stats_box_completed_exercises", track: track, user_track: user_track
+        = render "tracks/show/stats_box_completed_exercises", track:, user_track:
 
       - if track.course? && !user_track.practice_mode?
         - if user_track.num_concepts_learnt.positive?
-          = render "tracks/show/stats_box_learnt_concepts", track: track, user_track: user_track
+          = render "tracks/show/stats_box_learnt_concepts", track:, user_track:
         - else
-          = render "tracks/show/stats_box_available_exercises", track: track, user_track: user_track
+          = render "tracks/show/stats_box_available_exercises", track:, user_track:
 
         - if user_track.num_concepts_mastered.positive?
-          = render "tracks/show/stats_box_mastered_concepts", track: track, user_track: user_track
+          = render "tracks/show/stats_box_mastered_concepts", track:, user_track:
 
       - else
         - if user_track.num_in_progress_exercises.positive?
-          = render "tracks/show/stats_box_in_progress_exercises", track: track, user_track: user_track
+          = render "tracks/show/stats_box_in_progress_exercises", track:, user_track:
 
         - if user_track.num_available_exercises.positive?
-          = render "tracks/show/stats_box_available_exercises", track: track, user_track: user_track
+          = render "tracks/show/stats_box_available_exercises", track:, user_track:
 
-      - unless user_track.num_completed_exercises.positive?
-        = render "tracks/show/stats_box_locked_exercises", track: track, user_track: user_track
+      - if user_track.num_completed_exercises.zero? && user_track.num_locked_exercises.positive?
+        = render "tracks/show/stats_box_locked_exercises", track:, user_track:
 
+      - if @forum_threads.present?
+        %h3.text-h4.mt-32.mb-12 From the Forum...
+        .flex.flex-col.gap-8.mb-20
+          - @forum_threads.each do |thread|
+            = link_to thread.url, class: 'flex items-start bg-white px-16 py-12 shadow-base hover:shadow-smZ1 rounded-5 mb-8' do
+              = image_tag thread.poster_avatar_url, alt: "", role: :presentation, class: 'mr-8 h-[32px] w-[32px] rounded-circle'
+              .flex.flex-col.mr-auto
+                %h5.text-h6= thread.title
+                .text-textColor6.leading-150
+                  Latest by #{thread.poster_username}
+
+      = render ViewComponents::ProminentLink.new("Explore the #{track.title} Forum", "https://forum.exercism.org/c/programming/#{track.slug}", with_bg: true, external: true, css_class: 'mb-12')
       = render ViewComponents::ProminentLink.new("View #{track.title} Documentation", track_docs_path(track), with_bg: true, external: true)
 
 
