--- a/app/views/mailers/mailshots_mailer/challenge_12in23_calendar.text.erb
+++ b/app/views/mailers/mailshots_mailer/challenge_12in23_calendar.text.erb
@@ -18,3 +18,9 @@ Have a great day!
 
 Jeremy Walker
 Exercism Co-founder
+
+---
+
+You're receiving this because you've previously signed up to Exercism (the free, not-for-profit programming education platform) and are subscribed to our site update emails, where we send occasional updates when we add improvements to the platform.
+
+You can unsubscribe from this email (<%= unsubscribe_url(token: @user.communication_preferences.token, key: :receive_product_updates) %>) or change your notification settings (<%= unsubscribe_url(token: @user.communication_preferences.token) %>) to opt out of some or all emails.
